# Algebruh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
include/: README.md
include/Chemistry/: stoichiometry.h
include/Math/: area.h  quadratic.h
include/Physics/: gravity.h  kinematic.h  physics.h
include/Utils/: constants.h
scripts/: build.sh
src/: README.md  area.cpp  main.cpp  quadratic.cpp  stoichiometry.cpp
src/Chemistry/: stoichiometry.cpp
src/Math/: area.cpp  quadratic.cpp
src/Physics/: gravity.cpp  kinematic.cpp
